--- a/1. Prediction CAN Inflation.ipynb
+++ b/1. Prediction CAN Inflation.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "Sergio Torres ID: 300366657\n",
-    "[Github User:](https://github.com/yeisonmontoya1815) \n",
+    "[Github User](https://github.com/yeisonmontoya1815) \n",
     "\n",
     "Yeison Montoya ID: 300375916\n",
     "[Github User:](https://github.com/yeisonmontoya1815) \n",
