--- a/1. Notebook and datasets/1. Prediction CAN Inflation.ipynb
+++ b/1. Notebook and datasets/1. Prediction CAN Inflation.ipynb
@@ -12,10 +12,10 @@
    "metadata": {},
    "source": [
     "Sergio Torres ID: 300366657\n",
-    "[Github User](https://github.com/yeisonmontoya1815) \n",
+    "[Github User](https://github.com/xstorresm) \n",
     "\n",
     "Yeison Montoya ID: 300375916\n",
-    "[Github User:](https://github.com/yeisonmontoya1815) \n",
+    "[Github User](https://github.com/yeisonmontoya1815) \n",
     "\n",
     "    - Special Topics in Data Analytics CSIS 4260-002\n",
     "    - Douglas College - Winter 2024\n",
