--- a/1. Notebook and datasets/1. Prediction CAN Inflation.ipynb
+++ b/1. Notebook and datasets/1. Prediction CAN Inflation.ipynb
@@ -2732,18 +2732,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 368,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\yeiso\\AppData\\Local\\Temp\\ipykernel_32780\\2626265007.py:9: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
-      "  for (month, keyword), group in final_news_df.groupby([pd.Grouper(freq='M', key='Time'), 'Keywords']):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import necessary libraries\n",
     "from textblob import TextBlob\n",
@@ -2753,7 +2744,7 @@
     "sentiment_results = []\n",
     "\n",
     "# Group news data by month and keywords, then analyze sentiment\n",
-    "for (month, keyword), group in final_news_df.groupby([pd.Grouper(freq='M', key='Time'), 'Keywords']):\n",
+    "for (month, keyword), group in final_news_df.groupby([pd.Grouper(freq='ME', key='Time'), 'Keywords']):\n",
     "    # Concatenate titles within each group\n",
     "    month_keyword_text = ' '.join(group['Title'])\n",
     "    \n",
